dashboard done, card icons added

--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
           It will add more details to prject.
         </p>
         <div class="project-icons flex">
-          <span></span>
+          <span class="material-symbols-outlined">add_reaction</span>
+          <span class="material-symbols-outlined">heart_plus</span>
+          <span class="material-symbols-outlined">share</span>
         </div>
       </div>
       <div class="project-card">
@@ -79,7 +81,9 @@
           It will add more details to prject.
         </p>
         <div class="project-icons flex">
-          <span></span>
+          <span class="material-symbols-outlined">add_reaction</span>
+          <span class="material-symbols-outlined">heart_plus</span>
+          <span class="material-symbols-outlined">share</span>
         </div>
       </div>
       <div class="project-card">
@@ -88,7 +92,9 @@
           It will add more details to prject.
         </p>
         <div class="project-icons flex">
-          <span></span>
+          <span class="material-symbols-outlined">add_reaction</span>
+          <span class="material-symbols-outlined">heart_plus</span>
+          <span class="material-symbols-outlined">share</span>
         </div>
       </div>
       <div class="project-card">
@@ -97,7 +103,9 @@
           It will add more details to prject.
         </p>
         <div class="project-icons flex">
-          <span></span>
+          <span class="material-symbols-outlined">add_reaction</span>
+          <span class="material-symbols-outlined">heart_plus</span>
+          <span class="material-symbols-outlined">share</span>
         </div>
       </div>
       <div class="project-card">
@@ -106,7 +114,9 @@
           It will add more details to prject.
         </p>
         <div class="project-icons flex">
-          <span></span>
+          <span class="material-symbols-outlined">add_reaction</span>
+          <span class="material-symbols-outlined">heart_plus</span>
+          <span class="material-symbols-outlined">share</span>
         </div>
       </div>
       <div class="project-card">
@@ -115,7 +125,9 @@
           It will add more details to prject.
         </p>
         <div class="project-icons flex">
-          <span></span>
+          <span class="material-symbols-outlined">add_reaction</span>
+          <span class="material-symbols-outlined">heart_plus</span>
+          <span class="material-symbols-outlined">share</span>
         </div>
       </div>
     </div>
